[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/audio/overworld_music.gd" id="1_music"]

[node name="OverworldMusic" type="Node"]
process_mode = 3
script = ExtResource("1_music")

[node name="PlayerA" type="AudioStreamPlayer" parent="."]
bus = &"Overworld Music"

[node name="PlayerB" type="AudioStreamPlayer" parent="."]
bus = &"Overworld Music"
